--- a/tasks/01_detect_disk_devices.yml
+++ b/tasks/01_detect_disk_devices.yml
@@ -17,13 +17,12 @@
     - detect_disk_devices
     - always
   block:
-    # Include values: 8=[SATA, SCSI], 179=[MMC], 259=[NVMe]
     # And device with a mountpoint (iSCSI?) will have slashes in it, that line is filtered out
     # The RO indicates if device is read-only (value 1), the awk filters to value 0 - not read-only
     - name: Detect available disk devices
       ansible.builtin.shell:
         set -o pipefail &&
-        lsblk -ndo name,mountpoint,ro --include '8,179,259' | awk '/^[a-z]+/ && /0$/{print $1}'
+        lsblk -ndo name,mountpoint,ro --include '{{ smartd_device_types }}' | awk '/^[a-z]+/ && /0$/{print $1}'
       register: lsblk_devices
       changed_when: lsblk_devices.rc == 0
 
